--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,10 @@ header .head-side {
 }
 
 .profile-info-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 .profile-info-item-n {
@@ -389,6 +393,34 @@ header .head-side {
 }
 .full-user-photos .user-photo-item {
     margin:0;
+}
+
+.config-form {
+    margin-top: 10px;
+}
+.config-form label{
+    display: block;
+    padding: 10px 0;
+}
+.config-form input{
+    font-size: 14px;
+    width: 100%;
+    max-width: 500px;
+    padding: 10px 15px;
+}
+.config-form .mini{
+    max-height: 80px;
+}
+.button{
+    border: 0;
+    padding: 10px 20px;
+    background-color: #4a76a8;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 15px;
+    box-shadow: 0px 0px 3px #999;
+    text-decoration: none;
+
 }
 
 @media (max-width: 992px) {
