--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,13 +232,36 @@ header .head-side {
     display: none;
     color:#333;
 }
-.feed-new-send {
+.feed-new-send,
+.feed-new-photo {
     cursor: pointer;
     margin-right:5px;
 }
-.feed-new-send img {
+.feed-new-send img,
+.feed-new-photo img {
     width:25px;
     height:25px;
+}
+.feed-new-file{
+    position:absolute;
+    left:-500px;
+    top:-500;
+}
+.feed-pagination a{
+    display: inline-block;
+    padding: 7px 10px;
+    border: 1px solid #ccc;
+    margin:5px;
+    text-decoration: none;
+    color: #000;
+    border-radius: 3px;
+
+}
+.feed-pagination a:hover{
+    background-color: #ddd;
+}
+.feed-pagination a.active{
+    background-color: #fff;
 }
 
 .banners .box-body {
@@ -354,6 +377,7 @@ header .head-side {
 
 .user-photo-item {
     margin-right:10px;
+    max-width: 25%;
 }
 .user-photo-item:last-child {
     margin-right:0;
